--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    min-height: 100vh;
+    background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 60%, rgba(48,125,246,1) 60%, rgba(48,125,246,1) 100%);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
