--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+@import "colors";
+
+* {
+    box-sizing: border-box;
+}
+
 body {
+    margin: 0;
+    font-family: 'Inter', sans-serif;
     min-height: 100vh;
-    background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 60%, rgba(48,125,246,1) 60%, rgba(48,125,246,1) 100%);
+    background: linear-gradient(180deg, #307DF6 40.8vh, #fff 40.8vh);
     background-repeat: no-repeat;
     background-size: 100%;
 }
