feat: create board for game

--- a/src/app/components/square-tile/square-tile.component.scss
+++ b/src/app/components/square-tile/square-tile.component.scss
@@ -1,47 +1,44 @@
 @import 'colors';
 
 :host {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: -1px;
     width: 40px;
     height: 40px;
+    background-color: $grey-light;
 
     &:nth-child(3n + 1) {
-        margin-left: 2px;
+        margin-left: 2px !important;
+    }
+
+    &:nth-child(9n + 1) {
+        margin-left: 0 !important;
     }
 
     &:nth-child(1) {
-        input[type=text] {
-            border-top-left-radius: 4px;
-        }
+        border-top-left-radius: 4px;
     }
 
     &:nth-child(9) {
-        input[type=text] {
-            border-top-right-radius: 4px;
-        }
+        border-top-right-radius: 4px;
     }
 
     &:nth-child(73) {
-        input[type=text] {
-            border-bottom-left-radius: 4px;
-        }
+        border-bottom-left-radius: 4px;
     }
 
     &:nth-child(81) {
-        input[type=text] {
-            border-bottom-right-radius: 4px;
-        }
+        border-bottom-right-radius: 4px;
     }
 
-    @for $i from 1 through 9 {
-        &:nth-child(#{$i}) {
-            margin-top: 2px;
-        }
-    }
     @for $i from 28 through 36 {
         &:nth-child(#{$i}) {
             margin-top: 2px;
         }
     }
+
     @for $i from 55 through 63 {
         &:nth-child(#{$i}) {
             margin-top: 2px;
@@ -49,11 +46,16 @@
     }
 
     input[type=text] {
-        width: 36px;
-        height: 36px;
+        width: 38px;
+        height: 38px;
         border: 2px solid transparent;
         background: #fff;
         outline: none;
+        border-radius: inherit;
+        text-align: center;
+        font-size: 24px;
+        font-weight: 400;
+        color: $blue;
 
         &:focus {
             border-color: $blue;
