--- a/src/app/components/board/board.component.scss
+++ b/src/app/components/board/board.component.scss
@@ -1,13 +1,18 @@
 @import 'colors';
 
 :host {
-    width: 366px;
-    height: 366px;
+    width: 362px;
+    height: 364px;
+    margin-top: -1px;
     display: flex;
     flex-wrap: wrap;
     overflow: hidden;
     border-radius: 8px;
-    //border: 2px solid $grey-light;
+    border: 2px solid $blue-light;
     box-shadow: 0px 8px 16px 0px rgba(5, 74, 183, 0.20);
-    background-color: $grey-light;
+    background-color: $blue-light;
+}
+
+app-square-tile + app-square-tile {
+    margin-left: -1px;
 }
