--- a/src/app/components/welcome-template/welcome-template.component.html
+++ b/src/app/components/welcome-template/welcome-template.component.html
@@ -3,4 +3,4 @@
     To place a number in a square — <b>type the number on your keyboard</b> whilst hovering over the square, or after clicking on it
 </p>
 
-<app-button>Play</app-button>
+<app-button [routerLink]="['.', 'game']">Play</app-button>
