--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -1,3 +1,6 @@
-<ng-container *ngFor="let squareTile of tiles">
-    <app-square-tile></app-square-tile>
+<ng-container *ngFor="let row of (board$ | async) as board; let rowIndex = index">
+    <ng-container *ngFor="let col of row; let colIndex = index; trackBy: trackByIndex; let invalid">
+        <app-square-tile [value]="col"
+                         (onChangeValue)="setValue(board, rowIndex, colIndex, $event); invalid"></app-square-tile>
+    </ng-container>
 </ng-container>
