--- a/src/app/components/board/board.component.scss
+++ b/src/app/components/board/board.component.scss
@@ -3,6 +3,8 @@
 :host {
     width: 362px;
     height: 364px;
+    overflow: hidden;
+    position: relative;
     margin-top: -1px;
     display: flex;
     flex-wrap: wrap;
