--- a/src/app/components/button/button.component.scss
+++ b/src/app/components/button/button.component.scss
@@ -6,7 +6,7 @@
         padding: 8px 32px;
         border-radius: 24px;
         color: $blue;
-        border: 2px solid $blue;
+        border: 2px solid currentColor;
         font-size: 16px;
         font-weight: 700;
         letter-spacing: 0.8px;
@@ -18,6 +18,19 @@
         &:hover {
             background-color: $blue;
             color: #fff;
+        }
+    }
+}
+
+:host-context(.white) {
+    button {
+        color: #fff;
+        border-color: currentColor;
+
+        &:hover {
+            background-color: #fff;
+            border-color: #fff;
+            color: $blue;
         }
     }
 }
