--- a/src/app/components/square-tile/square-tile.component.scss
+++ b/src/app/components/square-tile/square-tile.component.scss
@@ -45,6 +45,31 @@
         }
     }
 
+    &:focus-within {
+        z-index: 1;
+        &::after,
+        &::before {
+            content: "";
+            position: absolute;
+            background-color: rgba(48, 125, 246, .1);
+            z-index: -1;
+        }
+
+        &::after {
+            top: 0;
+            bottom: 0;
+            width: 38px;
+            height: 100%;
+        }
+
+        &::before {
+            width: 100%;
+            height: 38px;
+            left: 0;
+            right: 0;
+        }
+    }
+
     input[type=text] {
         width: 38px;
         height: 38px;
